--- a/roles/apache/templates/index.html.j2
+++ b/roles/apache/templates/index.html.j2
@@ -1,5 +1,8 @@
 <html>
 {{ apache_test_message }} {{ ansible_distribution }} {{ansible_distribution_version }} <br />
 Current Host: {{ ansible_hostname }} <br />
-IP Address: {{ ansible_default_ipv4.interface }} <br />
+IP Address: {{ ansible_default_ipv4.address }} <br />
+Running On: {{ ansible_product_name }} <br />
+Number of VCPU: {{ ansible_processor_vcpus }} <br />
+Memory: {{ ansible_memtotal_mb }} MB <br />
 </html>
